feat: create workflows for dev deployment and quality checks (#4)
* feat: add blackduck support to ci

* chore: remove unused files

* feat: add sonar check

* refactor: change how sonar support was implemented

* feat: add initial workflows for multiple stages

* feat: update github workflows